--- a/src/app/set-advanced-search/set-advanced-search.component.html
+++ b/src/app/set-advanced-search/set-advanced-search.component.html
@@ -40,14 +40,14 @@
     </div>
 
     <div class="row">
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="set_flex--container content-row">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
-                        Integration type
+                        Integration Type
                     </div>
                 </div>
-                <div class="set_flex__item set_flex__item--vcenter mx-3">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3">
                     <mat-form-field floatLabel="never">        
                         <mat-select [(value)]="selected">
                           <mat-option value="option1">All</mat-option>
@@ -58,14 +58,14 @@
             </div>   
         </div>
 
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="set_flex--container title-row">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
                         Trigger
                     </div>
                 </div>
-                <div class="set_flex__item set_flex__item--vcenter mx-3">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3">
                     <mat-form-field floatLabel="never">        
                         <mat-select [(value)]="selected">
                           <mat-option value="option1">All</mat-option>
@@ -76,14 +76,14 @@
             </div>   
         </div>
 
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="set_flex--container title-row">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
-                        Schdule
+                        Schedule
                     </div>
                 </div>
-                <div class="set_flex__item set_flex__item--vcenter mx-3">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3">
                     <mat-form-field floatLabel="never">        
                         <mat-select [(value)]="selected">
                           <mat-option value="option1">All</mat-option>
@@ -94,14 +94,14 @@
             </div>   
         </div>
 
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="set_flex--container title-row">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
-                        Output type
+                        Output Type
                     </div>
                 </div>
-                <div class="set_flex__item set_flex__item--vcenter mx-3">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3">
                     <mat-form-field floatLabel="never">        
                         <mat-select [(value)]="selected">
                           <mat-option value="option1">All</mat-option>
@@ -112,14 +112,14 @@
             </div>   
         </div>
 
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="set_flex--container title-row">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
-                        Entity type
+                        Entity Type
                     </div>
                 </div>
-                <div class="set_flex__item set_flex__item--vcenter mx-3">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3">
                     <mat-form-field floatLabel="never">        
                         <mat-select [(value)]="selected">
                           <mat-option value="option1">All</mat-option>
@@ -130,14 +130,14 @@
             </div>   
         </div>
 
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="set_flex--container title-row">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
-                        Created by
+                        Created By
                     </div>
                 </div>
-                <div class="set_flex__item set_flex__item--vcenter mx-3">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3">
                     <mat-form-field floatLabel="never">        
                         <mat-select [(value)]="selected">
                           <mat-option value="option1">All</mat-option>
@@ -150,24 +150,24 @@
     </div>
 
     <div class="row mt-4">
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div class="set_flex--container action-row h-100">
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12">
+            <div class="set_flex--container h-100">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
-                        Show active
+                        Show Active
                     </div>
                 </div>
 
-                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hstart p60">
+                <div class="set_flex__item set_flex__item--vcenter set_flex__item--hstart pr-w20">
                     <mat-checkbox></mat-checkbox>
                 </div>
             </div>   
         </div>
 
-        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+        <div class="col-xl-8 col-lg-8 col-md-6 col-sm-12 col-xs-12">
             <div class="set_flex--container h-100 action-row">
                 <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3 p20">
-                    <button class="mx-3" mat-stroked-button>Clear Filters</button>
+                    <button class="set-btn-outline-bg__primary mx-3" mat-stroked-button>Clear Filters</button>
                     <button class="set-btn-bg__primary" mat-raised-button>Apply Filters</button>
                 </div>
  
