--- a/src/styles/pages/_advanced-search.scss
+++ b/src/styles/pages/_advanced-search.scss
@@ -31,4 +31,10 @@
     .title-row{
         height: 56px;
     }
+
+    .action-row{
+        @media only screen and (max-width: 768px) {
+            margin-top: 24px;
+        }
+    }
 }
