--- a/src/styles/pages/_search-configuration.scss
+++ b/src/styles/pages/_search-configuration.scss
@@ -3,7 +3,10 @@
     border: 1px solid #eee;
     margin: 16px;
     padding: 0 16px 24px 16px;
-
+    @media only screen and (max-width: 768px) {
+        margin: 0px;
+        padding: 0 8px 12px 8px;
+    }
 
     .filter-row{
         background-color: #fff;
