--- a/src/app/set-search-configurations/set-search-configurations.component.html
+++ b/src/app/set-search-configurations/set-search-configurations.component.html
@@ -21,7 +21,7 @@
                         </div>
 
                         <div class="set_flex__item set_flex__item--vcenter">
-                            <mat-form-field appearance="none" floatLabel="never">        
+                            <mat-form-field appearance="none">        
                                 <mat-select [(value)]="selected">
                                   <mat-option value="option1">All</mat-option>
                                   <mat-option value="option2">Option</mat-option>
@@ -33,7 +33,7 @@
                 
               </mat-chip-list>
 
-              <button class="set-btn-outline-bg__primary mx-3" mat-button>Clear Filters</button>
+              <button class="set-btn-txt__secondary mx-3" mat-button>Clear Filters</button>
         </div>
     </div>
 
@@ -42,8 +42,8 @@
             <div class="ml-4 set-txt-s2 set-text-color__secondary"><span>5</span> Items Found</div>
         </div>
 
-        <div class="set_flex__item set_flex__item--vcenter p70 d-none">
-            <button class="set-txt-s2 set-text-color__primary" mat-button><mat-icon class="set-icn-small">delete</mat-icon>Delete<span class="mx-1">3</span>items </button>
+        <div class="set_flex__item set_flex__item--vcenter p70">
+            <button class="set-txt-s2 set-icon-btn" mat-button><mat-icon class="set-icn-small">delete</mat-icon>Delete<span class="mx-1">2</span>items </button>
         </div>
     </div>
 
