--- a/src/app/set-search-configurations/set-search-configurations.component.html
+++ b/src/app/set-search-configurations/set-search-configurations.component.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="set_flex__item set_flex__item--vcenter p70">
-            <button class="set-txt-s2 set-icon-btn" mat-button><mat-icon class="set-icn-small">delete</mat-icon>Delete<span class="mx-1">2</span>items </button>
+            <button class="set-icon-btn" mat-button><mat-icon class="set-icn-small">delete</mat-icon>Delete<span class=""></span>2 Items </button>
         </div>
     </div>
 
